# credit_default_risk

./: .gitignore  Dockerfile  pyproject.toml
.github/workflow/: deploy.yml
app/: main.py  streamlit_app.py  streamlit_app_heroku.py
data_drift/: data_drift.ipynb
models/: logistic_regression_model.pkl  trained_model.pkl
notebooks/: LogisticRegression.ipynb  models.ipynb
tests/: test_api.py
