[tool.poetry]
name = "credit-default-risk"
version = "0.1.0"
description = ""
authors = ["ouykhy <ouykhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
mlflow = "^2.19.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
streamlit = "^1.41.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pytest = "^8.3.4"
imblearn = "^0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
